--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="hero">
         <h1>Broadway Design</h1>
         <nav>
-            <p><a href="#">Home</a></p>
-            <p><a href="#">Process</a></p>
-            <p><a href="#">Work</a></p>
-            <p><a href="#">Team</a></p>
-            <p><a href="#">Contact</a></p>
+            <p><a class="whitefont" href="#">Home</a></p>
+            <p><a class="whitefont" href="#">Process</a></p>
+            <p><a class="whitefont" href="#">Work</a></p>
+            <p><a class="whitefont" href="#">Team</a></p>
+            <p><a class="whitefont" href="#">Contact</a></p>
        </nav>
     </div>
     
@@ -36,7 +36,7 @@
     </section>
     <section>
         <div class="hero">
-            <h3>Designed in New York</h3>
+            <h3 class="whitefont">Designed in New York</h3>
         </div>
         <h3>Portfolio</h3>
         <p>Coming Soon</p>
@@ -49,11 +49,11 @@
     </section>
     <footer role="contentinfo">
         <nav>&copy; Broadway 2018  
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Work</a>
-            <a href="#">Team</a> 
-            <a href="#">Contact</a>
+            <a class="whitefont" href="#">Home</a>
+            <a class="whitefont" href="#">About</a>
+            <a class="whitefont" href="#">Work</a>
+            <a class="whitefont" href="#">Team</a> 
+            <a class="whitefont" href="#">Contact</a>
         </nav>
     </footer>
 </body>
