Clean code for html and css fle.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,11 +12,11 @@
     <div class="hero">
         <h1>Broadway Design</h1>
         <nav>
-            <p><a class="whitefont" href="#">Home</a></p>
-            <p><a class="whitefont" href="#">Process</a></p>
-            <p><a class="whitefont" href="#">Work</a></p>
-            <p><a class="whitefont" href="#">Team</a></p>
-            <p><a class="whitefont" href="#">Contact</a></p>
+            <p><a href="#">Home</a></p>
+            <p><a href="#">Process</a></p>
+            <p><a href="#">Work</a></p>
+            <p><a href="#">Team</a></p>
+            <p><a href="#">Contact</a></p>
        </nav>
     </div>
     
@@ -43,17 +43,17 @@
         <h3>Team</h3>
         <p>We're Hiring!</p>
         <h3>Contact</h3>
-        <p><a href="tel: 555-555-5555">Phone: (555)-555-5555</a></p>
-        <p><a href="test@example.com">E-mail: test@example.com</a></p>
+        <p><a href="tel:555-555-5555">Phone: (555)-555-5555</a></p>
+        <p><a href="mailto:test@example.com">E-mail: test@example.com</a></p>
         <p>Twitter: @test</p>
     </section>
-    <footer role="contentinfo">
+    <footer>
         <nav>&copy; Broadway 2018  
-            <a class="whitefont" href="#">Home</a>
-            <a class="whitefont" href="#">About</a>
-            <a class="whitefont" href="#">Work</a>
-            <a class="whitefont" href="#">Team</a> 
-            <a class="whitefont" href="#">Contact</a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Work</a>
+            <a href="#">Team</a> 
+            <a href="#">Contact</a>
         </nav>
     </footer>
 </body>
